# conferir_debito_erp

./: .gitignore  README.md  conferir_debito.py  conferir_debito_play.py  cpf.txt  pyproject.toml  test_conferir_debito.py  update-endereco.csv
